# ChatGPT-Desktop

./: package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1681894197174.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_audio.pcm
src-tauri/.cargo/: config
src-tauri/src/: back_end.rs  commands.rs  main.rs  read_file.rs  stt.rs  tray.rs  voiceInput.rs
src/api/: openAi.ts
src/components/Avatar/: index.vue
src/components/Function/: index.vue
src/components/Function/components/: AddSession.vue  ReadFile.vue
src/components/Input/: index.vue
src/components/Input/components/: RoleList.vue  VoiceComponent.vue
src/components/Input/js/: audio-processor.js  voice.js
src/utils/: getMessage.ts
